# correio-de-imagens

./: README.md  index.html  pyproject.toml  required.txt  requirements.txt
src/: app.py
src/model/: __init__.py
src/utils/: __init__.py
