[tool.poetry]
name = "correio-de-imagens"
version = "0.1.0"
description = "Aprendo api com python"
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
PyQRCode = "^1.2.1"
tinydb = "^4.7.0"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
click = "8.0.4;"
python_version = "^0.0.2"
colorama = "0.4.4;"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
